--- a/WilenInmobiliaria/WilenInmobiliaria/MainWindow.xaml
+++ b/WilenInmobiliaria/WilenInmobiliaria/MainWindow.xaml
@@ -3,10 +3,33 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:WilenInmobiliaria"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+             Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Rectangle Height="280" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Gray"/>
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="Gray" Offset="0.5"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Image Source="C:\Users\MrMRmiguelo\source\repos\Wilen\ProyectoInmobiliariaWilen\ProyectoInmobiliarioWilen\ProyectoInmobiliarioWilen\Fotos\40322405_316798888867786_2113668661808988160_n.jpg" Width="100" Height="100" VerticalAlignment="Top" Margin="20"/>
+        <Rectangle Width="300" Height="240" Fill="White" VerticalAlignment="Bottom" Margin="0,100" RadiusY="11.93" RadiusX="11.93">
+            <Rectangle.Effect>
+                <DropShadowEffect Color="Gray" Direction="0" BlurRadius="10" ShadowDepth="1" RenderingBias="Quality"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Grid Width="280" Height="240" VerticalAlignment="Bottom" Margin="0,100">
+            <TextBlock Text="LOGIN" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5" Foreground="Gray" FontSize="18"/>
+            <StackPanel VerticalAlignment="Center" Margin="10">
+                <TextBox  Name="txtUsuario" materialDesign:HintAssist.Hint="Usuario"  Margin="0,10" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
+                <PasswordBox Name="txtPass" materialDesign:HintAssist.Hint="Contraseña"  Margin="0.10" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
+            </StackPanel>
+        </Grid>
+        <Button Name="btnLogin" VerticalAlignment="Bottom" Margin="0,85" Width="150" Content="LOGIN" Click="BtnLogin_Click" MouseEnter="BtnLogin_MouseEnter" MouseLeave="BtnLogin_MouseLeave" />
     </Grid>
 </Window>
